@@ -33,6 +33,16 @@
   </section>
 
   <section>
+    <title>Release 5.4-5</title>
+
+    <itemizedlist>
+      <listitem>
+        <para>NSIS Installation changed so that special characters like | are supported in (branded) project name</para>
+      </listitem>
+    </itemizedlist>
+  </section>
+
+  <section>
     <title>Release 5.4-4</title>
 
     <itemizedlist>
